src/objects/AOP_For_Sales_Manger__c/AOP_For_Sales_Manger__c.object-meta.xml
<CustomObject>
    <label>AOP For Sales Manger</label>
    <nameField>
        <displayFormat>AOPSM-{0000000}</displayFormat>
        <label>AOP For Sales Manger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOP For Sales Mangers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>