src/objects/AOP_For_Sales_Manger__c/fields/AOP_BGA_AM__c.field-meta.xml
<CustomField>
    <fullName>AOP_BGA_AM__c</fullName>
    <label>AOP BGA AM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>