src/objects/AOP_For_Sales_Manger__c/fields/Dealer_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Amount1__c</fullName>
    <label>Dealer Amount1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>