src/objects/AOP_For_Sales_Manger__c/fields/Opp_Closed_Won_Amount_for_RMU__c.field-meta.xml
<CustomField>
    <fullName>Opp_Closed_Won_Amount_for_RMU__c</fullName>
    <label>Opp Closed Won Amount for RMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>