src/objects/AOP_For_Sales_Manger__c/fields/Pipeline_BGA_AM_Factored__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_BGA_AM_Factored__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BGA AM Factored Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>