src/objects/AOP_For_Sales_Manger__c/fields/Pipeline_RMU__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_RMU__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RMU Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>