src/objects/AOP_For_Sales_Manger__c/fields/RMU_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>RMU_Closed_Won__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Last) RMU Closed Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>