src/objects/AOP_For_Sales_Manger__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AOP_For_Sales_Mangers</relationshipName>
    <type>Lookup</type>
</CustomField>