src/objects/AOP_For_Sales_Manger__c/validationRules/AOP_Sales_Manager_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AOP_Sales_Manager_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_Manager__c ==null</errorConditionFormula>
    <errorMessage>Please enter a Sales Manager Name</errorMessage>
</ValidationRule>