src/objects/AOP_For_Sales_Manger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AOP_Year__c</columns>
    <columns>Actual_BGA_AM__c</columns>
    <columns>AOP_BGA_AM__c</columns>
    <columns>AOP_RMU__c</columns>
    <columns>Opp_Closed_Won_Amount_for_RMU__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AOP_Year__c</field>
        <operation>equals</operation>
        <value>2011</value>
    </filters>
    <label>All for 2011</label>
</ListView>