src/objects/AOP_For_Sales_Manger__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Sales_Manager_SBU__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>AOP_Year__c</columns>
    <columns>AOP_SBU__c</columns>
    <columns>AOP_Sales_Channel__c</columns>
    <columns>AOP_BGA_AM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>