src/objects/AOP_For_Sales_Manger__c/listViews/All2017.listView-meta.xml
<ListView>
    <fullName>All2017</fullName>
    <columns>NAME</columns>
    <columns>Sales_Manager_SBU__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>AOP_Year__c</columns>
    <columns>AOP_SBU__c</columns>
    <columns>AOP_Sales_Channel__c</columns>
    <columns>AOP_BGA_AM__c</columns>
    <columns>Actual_BGA_AM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AOP_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>All 2017</label>
    <language>en_US</language>
</ListView>