src/objects/AOP_For_Sales_Manger__c/listViews/All_for_2017.listView-meta.xml
<ListView>
    <fullName>All_for_2017</fullName>
    <columns>NAME</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Manager__c</columns>
    <columns>Senior_Director__c</columns>
    <columns>AOP_Year__c</columns>
    <columns>AOP_SBU__c</columns>
    <columns>AOP_Sales_Channel__c</columns>
    <columns>Actual_BGA_AM__c</columns>
    <columns>AOP_BGA_AM__c</columns>
    <columns>AOP_RMU__c</columns>
    <columns>Opp_Closed_Won_Amount_for_RMU__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AOP_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>All for 2017</label>
    <language>en_US</language>
</ListView>